--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import 'fonts.scss';
+@import "fonts.scss";
 
 body {
     overflow: hidden;
@@ -7,25 +7,39 @@ body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
 
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 
     h1, h2, h3, h4, h5, h6 {
-        font-family: 'GalanoGrotesque', sans-serif;
+        font-family: "GalanoGrotesque", sans-serif;
         margin: 0;
-        font-size: 3.75rem;
+        font-size: 2rem;
         margin-block-end: 0.5em;
     }
 
     h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     h3 {
-        font-size: 2.25rem;
+        font-size: 1.25rem;
     }
 
-    h4 {
-        font-size: 1.5rem;
+    @media screen and (min-width: 768px) {
+        h1 {
+            font-size: 3.75rem;
+        }
+
+        h2 {
+            font-size: 3rem;
+        }
+
+        h3 {
+            font-size: 2.25rem;
+        }
+
+        h4 {
+            font-size: 1.5rem;
+        }
     }
 }
 
@@ -37,7 +51,6 @@ p {
 a {
     text-decoration: none;
 }
-
 
 .u-flex {
     display: flex;
